# biosignal-tools

./: .gitignore  README.md
biosig/demo/: demo10.m  demo3.m
biosig/doc/: eventcodes.txt  units.csv
biosig/t200_FileAccess/: cntopen.m  getfiletype.m  hdr2ascii.m  sload.m  sopen.m  sread.m
biosig/t250_ArtifactPreProcessingQualityControl/: detect_spikes_bursts.m  remove5060hz.m  spikes2bursts.m
biosig/t300_FeatureExtraction/: baccala2001.m  get_local_maxima_above_threshold.m  signal_deconvolution.m
biosig/t500_Visualization/: sview.m
biosig4c++/: CMakeLists.txt  INSTALL  Makefile  README  README.cygwin  annotatedECG.awk  biosig-dev.h  biosig-network.c  biosig-network.h  biosig.c  biosig.h  biosig2.c  biosig2.h  biosig_client.c  biosig_server.c  eventcodes.awk  extern  gdftime.c  gdftime.h  mdc_ecg_codes.h  physicalunits.c  physicalunits.h  save2gdf.c  todo.txt  units.awk  xgethostname.c
biosig4c++/XMLParser/: tinyxml.cpp  tinyxml.h
biosig4c++/doc/: heka2itx.1  save2gdf.1
biosig4c++/igor/: IgorBin.h  xopSLOAD.c
biosig4c++/igor/ptn003/: COPYING  CrossPlatformFileIO.c  IgorSupport.c  IgorSupport.h  PackedFile.h  PackedFileDemo.c  PackedFileDemo.h  ReadPackedFile.c  ReadWave.c  Variables.h  WritePackedFile.c  WriteWave.c
biosig4c++/igor/tn003/: COPYING  ReadWave.c  TestWave.c  WriteWave.c
biosig4c++/java/: biosig.i
biosig4c++/macports/science/biosig4c++/: Portfile
biosig4c++/macports/science/libbiosig/: Portfile
biosig4c++/mex/: Makefile  README  cygwin_octave364.patch  mexSLOAD.cpp  mexSSAVE.cpp
biosig4c++/mma/: INSTALL  Makefile  hdrinfo.nb  mySLOAD.nb  sload.c  sload.tm
biosig4c++/patches/: patch_mingw_io_h.diff  patch_sigviewer_0.5.1-as.4-DisplayHeaderInfo+EventTableAlways4Columns+SampleRateChanged2FLOAT64+libbiosigEventTable.diff  patch_sigviewer_0.5.2.diff  patch_stimfit010_disablePython.diff  patch_stimfit010_withoutPython_withBiosig.diff  patch_stimfit011_mingw.diff  tinyxml.diff
biosig4c++/perl/: biosig.i
biosig4c++/php/: biosig.i
biosig4c++/python/: Makefile  biosig2.i  demo.py  swig.i
biosig4c++/release/: release.sh
biosig4c++/release/debian/: README.source  biosig-tools.install  biosig-tools.lintian-overrides  biosig4c++.cron.d.ex  biosig4c++.doc-base.EX  control  emacsen-install.ex  emacsen-startup.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postrm.ex  python-biosig.examples
biosig4c++/ruby/: biosig.i  extconf.rb  install.sh  test.rb
biosig4c++/src/: flowmon.c  flowmon2.c  ttl2trig.c
biosig4c++/t210/: abfheadr.h  scp-decode.cpp  sopen_abf_read.c  sopen_alpha_read.c  sopen_axg_read.c  sopen_cfs_read.c  sopen_famos_read.c  sopen_heka_read.c  sopen_igor.c  sopen_scp_read.c  structures.h
biosig4c++/t220/: sopen_scp_write.c
biosig4c++/t230/: sopen_hl7aecg.c  sopen_hl7aecg.cpp
biosig4c++/t240/: GeneralizedTime.c  Makefile  sopen_fef_read.c
biosig4c++/t241/: ISO11073-20601.asn1
biosig4c++/tcl/: biosig.i
biosig4c++/test0/: sandbox.c  test01.m  test_ttl2trig.sh
biosig4c++/win32/: README  bin2rec.bat  byteswap.h  getdelim.c  getline.c  getlogin.c  rec2bin.bat  strndup.c  strnlen.c
biosig4c++/win64/: README
biosig4matlab/demo/: demo3.m
biosig4matlab/doc/: 11073-10102-AnnexB.txt  eventcodes.txt  units.csv
biosig4matlab/maybe-missing/: regexp.cc  strfind2.m  strfind3.m
biosig4matlab/t200_FileAccess/: edfannot2evt.m  hdr2ascii.m  sclose.m  sload.m  sopen.m  sread.m
biosig4matlab/t250_ArtifactPreProcessingQualityControl/: burstanalysis.m  detect_spikes_bursts.m  detectmuscle.m  get_inter_spike_intervals.m  optimum_isi_spike_burst_separation.m  spikes2bursts.m
biosig4matlab/t500_Visualization/: plota.m  sview.m
release/: release.sh
release/debian/: README.Debian  README.source  biosig-tools.links  biosig4c++.default.ex  blends  changelog  control  copyright  docs  emacsen-remove.ex  init.d.ex  libbiosig-dev.install  libbiosig-dev.links  libbiosig16-dbg.dirs  libbiosig16.install  libbiosig16.links  octave-biosig.lintian-overrides  postinst.ex  preinst.ex  prerm.ex  rules  watch.ex
sigviewer/: Makefile
sigviewer/src/: src.pro
sigviewer/src/base/: data_block.cpp  data_block.h  fixed_data_block.cpp  fixed_data_block.h  math_utils.cpp  math_utils.h  signal_channel.cpp  signal_channel.h  signal_event.cpp  signal_event.h  sigviewer_user_types.h
sigviewer/src/file_handling/: basic_header.cpp
sigviewer/src/file_handling_impl/: biosig_basic_header.cpp  biosig_reader.cpp  biosig_reader.cpp.new  biosig_writer.cpp  channel_manager_impl.h  event_table_file_reader.cpp  event_table_file_reader.h  (+3 more)
(+69 files in other folders)
